Files/12-kubernetes-05-net2/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-nginx
  labels:
    app: nginx
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.22.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: default
spec:
  selector:
    app: nginx
  ports:
  - name: frontend
    port: 9001
    targetPort: 80
    protocol: TCP
    nodePort: 30080
  type: NodePort
